refactor: 移除未使用的代码和常量